# typedown

./: .gitignore  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  opencode.json  package.nix  rufio-hooks.yaml  schema.json  shell.nix  version.toml
.github/: requirements-zigbuild.txt
.github/workflows/: cargo-ci.yaml  cargo-release.yaml
.typedown/: agents.yaml  journal.yaml  roadmap.yaml  test-feature.yaml  test-hardware.yaml  test-index.yaml  test-log.yaml  test-overview.yaml
presets/: agent.yaml  agents.yaml  command.yaml  journal-entry.yaml  journal.yaml  readme.yaml  roadmap.yaml  skill.yaml
src/: ast.rs  cli.rs  fix.rs  format.rs  git.rs  json.rs  lsp.rs  main.rs  parse.rs  query.rs  schema.rs  validate.rs
test-docs/: INDEX.md  OVERVIEW.md
test-docs/features/: auto-fix.md  frontmatter-validation.md  json-output.md  link-validation.md  properties.md  section-structure.md
test-docs/hardware/: homelab.md
test-docs/hardware/.typedown/: test-hardware.yaml
test-docs/log/: 2026-03.md
test-docs/tests/: INDEX.md  OVERVIEW.md
test-docs/tests/.typedown/: test-feature.yaml  test-index.yaml  test-log.yaml  test-overview.yaml
test-docs/tests/features/: cross-project-linking.md  link-validation.md
